--- a/cloud-config-server/template/cluster-desc.sample.yaml
+++ b/cloud-config-server/template/cluster-desc.sample.yaml
@@ -17,6 +17,10 @@ flannel_backend: "host-gw"
 coreos_channel: "stable"
 # coreos_version can be configured as the special version num or "current"
 coreos_version: "current"
+# Coreos_update can configured as special status for os updated .
+# The default switch is shut, but you can be configured to opened,
+# Such as:  coreos_update: y/n
+coreos_update: n
 
 ceph:
   zap_and_start_osd: y
