update Pull request 381

--- a/cloud-config-server/template/cloud-config.template
+++ b/cloud-config-server/template/cloud-config.template
@@ -245,7 +245,7 @@ coreos:
         {{- end }}
     flannel:
       etcd_endpoints: "{{ .EtcdEndpoints }}"
-    {{- if .CoreOSUpdate }}
+    {{- if ne.CoreOSUpdate  "off" }}
     update:
         reboot-strategy: "etcd-lock"
     locksmith:
