--- a/cloud-config-server/template/cloud-config.template
+++ b/cloud-config-server/template/cloud-config.template
@@ -245,15 +245,17 @@ coreos:
         {{- end }}
     flannel:
       etcd_endpoints: "{{ .EtcdEndpoints }}"
-    {{- if ne .CoreOSUpdate  "off" }}
+    {{- if eq .OSUpdate  "on" }}
     update:
-        reboot-strategy: "etcd-lock"
+        reboot-strategy: {{ .RebootStrategy }}
     locksmith:
-        window_start: "03:00"
-        window_length: "3h"
+        window_start: {{ .StartTime }}
+        window_length: {{ .TimeLength }}
     {{- else }}
+    {{- if ne .OSUpdate  "off" }}
     update:
-        reboot-strategy: "off"
+        reboot-strategy: {{ .RebootStrategy }}
+    {{- end }}
     {{- end }}
     units:
         - name: 00-eth0.network
