--- a/vm-cluster/Vagrantfile
+++ b/vm-cluster/Vagrantfile
@@ -29,7 +29,7 @@ Vagrant.configure("2") do |config|
     #创建内部网卡，便于和其他虚拟机通信
     bs.vm.network "private_network", ip: "192.168.8.101",virtualbox__intnet: true
     #将本地目录挂载到bootstrapper虚拟机
-    bs.vm.synced_folder "./../bsroot", "/bsroot", id: "core", :nfs => true, :mount_options => ['nolock,vers=3,udp']
+    bs.vm.synced_folder "~/bsroot", "/bsroot", id: "core", :nfs => true, :mount_options => ['nolock,vers=3,udp']
     $shared_folders.each_with_index do |(host_folder, guest_folder), index|
        config.vm.synced_folder host_folder.to_s, guest_folder.to_s, id: "core-share%02d" % index, nfs: true, mount_options: ['nolock,vers=3,udp']
     end
