fix pr 381 for 2016-11-08-16-32

--- a/cloud-config-server/template/cluster-desc.sample.yaml
+++ b/cloud-config-server/template/cluster-desc.sample.yaml
@@ -19,15 +19,15 @@ coreos_channel: "stable"
 coreos_version: "current"
 
 coreos:
-  - os_update: "on"
-    reboot_strategy: "etcd-lock"
-    start_time: "03:00"
-    time_length: "3h"
-  # - os_update: "off"
-  #   reboot_strategy: "off"
-  #   start_time: "off"
-  #   time_length: "off"
-      
+  os_update: "on"
+  reboot_strategy: "etcd-lock"
+  start_time: "03:00"
+  time_length: "3h"
+  # os_update: "off"
+  # reboot_strategy: "off"
+  # start_time: "off"
+  # time_length: "off"
+
 ceph:
   zap_and_start_osd: y
   osd_journal_size: 100
