--- a/cloud-config-server/template/cluster-desc.sample.yaml
+++ b/cloud-config-server/template/cluster-desc.sample.yaml
@@ -49,7 +49,7 @@ nodes:
     kube_master: y
     etcd_member: y
     ingress_label: n
-    flannel_iface: "eth0"
+    #flannel_iface: "eth0"
   - mac: "00:25:90:c0:f6:ee"
     ceph_monitor: y
     kube_master: n
