--- a/vm-cluster/cluster-desc.yml.template
+++ b/vm-cluster/cluster-desc.yml.template
@@ -1,15 +1,15 @@
 bootstrapper: 192.168.8.101
 subnet: 192.168.8.0
 netmask: 255.255.255.0
-iplow: 192.168.8.201
+iplow: 192.168.8.100
 iphigh: 192.168.8.220
 routers: [192.168.8.101]
 broadcast: 192.168.8.255
-nameservers: [192.168.8.101]
+nameservers: [192.168.8.192]
 upstreamnameservers: [8.8.8.8, 8.8.4.4]
-domainname: "k8s.baifendian.com"
+domainname: "ailab.unisound.com"
 dockerdomain: "bootstrapper"
-k8s_service_cluster_ip_range: 10.100.0.10/24
+k8s_service_cluster_ip_range: 10.100.0.0/24
 k8s_cluster_dns: 10.100.0.10
 # Flannel backend only support host-gw and udp for now.
 flannel_backend: "host-gw"
@@ -17,10 +17,12 @@ flannel_backend: "host-gw"
 coreos_channel: "stable"
 # coreos_version can be configured as the special version num or "current"
 coreos_version: "current"
-# Coreos_update can configured as special status for os updated .
-# The default switch is opened, but you can be configured to shut,
-# Such as:  coreos_update: y/n
-coreos_update: n
+
+coreos:
+  os_update: "on"
+  reboot_strategy: "etcd-lock"
+  start_time: "03:00"
+  time_length: "3h"
 
 ceph:
   zap_and_start_osd: y
@@ -38,11 +40,36 @@ images:
   ceph: "typhoon1986/ceph-daemon:tag-build-master-jewel-ubuntu-14.04-fix370"
 
 nodes:
-  - mac: "08:00:27:4a:2d:a1"
+  - mac: "00:25:90:c0:f7:80"
     ceph_monitor: y
     kube_master: y
     etcd_member: y
     ingress_label: n
+    flannel_iface: "eth0"
+  - mac: "00:25:90:c0:f6:ee"
+    ceph_monitor: y
+    kube_master: n
+    etcd_member: y
+    ingress_label: n
+    flannel_iface: "eth0"
+  - mac: "00:25:90:c0:f6:d6"
+    ceph_monitor: y
+    kube_master: n
+    etcd_member: y
+    ingress_label: n
+    flannel_iface: "eth0"
+  - mac: "00:25:90:c0:f7:ac"
+    ceph_monitor: n
+    kube_master: n
+    etcd_member: y
+    ingress_label: n
+    flannel_iface: "eth0"
+  - mac: "00:25:90:c0:f7:7e"
+    ceph_monitor: n
+    kube_master: n
+    etcd_member: y
+    ingress_label: y
+    flannel_iface: "eth0"
 
 ssh_authorized_keys: |1+
     - "<SSH_KEY>"
