--- a/vm-cluster/cluster-desc.yml.template
+++ b/vm-cluster/cluster-desc.yml.template
@@ -40,35 +40,11 @@ images:
   ceph: "typhoon1986/ceph-daemon:tag-build-master-jewel-ubuntu-14.04-fix370"
 
 nodes:
-  - mac: "00:25:90:c0:f7:80"
+  - mac: "08:00:27:4a:2d:a1"
     ceph_monitor: y
     kube_master: y
     etcd_member: y
     ingress_label: n
-    flannel_iface: "eth0"
-  - mac: "00:25:90:c0:f6:ee"
-    ceph_monitor: y
-    kube_master: n
-    etcd_member: y
-    ingress_label: n
-    flannel_iface: "eth0"
-  - mac: "00:25:90:c0:f6:d6"
-    ceph_monitor: y
-    kube_master: n
-    etcd_member: y
-    ingress_label: n
-    flannel_iface: "eth0"
-  - mac: "00:25:90:c0:f7:ac"
-    ceph_monitor: n
-    kube_master: n
-    etcd_member: y
-    ingress_label: n
-    flannel_iface: "eth0"
-  - mac: "00:25:90:c0:f7:7e"
-    ceph_monitor: n
-    kube_master: n
-    etcd_member: y
-    ingress_label: y
     flannel_iface: "eth0"
 
 ssh_authorized_keys: |1+
