--- a/vm-cluster/cluster-desc.yml.template
+++ b/vm-cluster/cluster-desc.yml.template
@@ -7,7 +7,7 @@ routers: [192.168.8.101]
 broadcast: 192.168.8.255
 nameservers: [192.168.8.192]
 upstreamnameservers: [8.8.8.8, 8.8.4.4]
-domainname: "ailab.unisound.com"
+domainname: "k8s.baifendian.com"
 dockerdomain: "bootstrapper"
 k8s_service_cluster_ip_range: 10.100.0.0/24
 k8s_cluster_dns: 10.100.0.10
