--- a/addons/template/ingress.template
+++ b/addons/template/ingress.template
@@ -1,5 +1,5 @@
-apiVersion: v1
-kind: ReplicationController
+apiVersion: extensions/v1beta1
+kind: Deployment
 metadata:
   name: nginx-ingress-controller-v1
   namespace: kube-system
@@ -9,8 +9,6 @@ metadata:
     kubernetes.io/cluster-service: "true"
 spec:
   replicas: {{ .IngressReplicas }}
-  selector:
-    k8s-app: nginx-ingress-lb
   template:
     metadata:
       labels:
@@ -18,6 +16,9 @@ spec:
         name: nginx-ingress-lb
     spec:
       terminationGracePeriodSeconds: 60
+      {{- if .IngressHostNetwork }}
+      hostNetwork: true
+      {{- end }}
       containers:
       - image: {{ .Dockerdomain }}:5000/{{ .Images.ingress }}
         name: nginx-ingress-lb
@@ -39,6 +40,10 @@ spec:
             valueFrom:
               fieldRef:
                 fieldPath: metadata.namespace
+          {{- if .IngressHostNetwork }}
+          - name: KUBERNETES_SERVICE_HOST
+            value: {{ .MasterHostname }}
+          {{- end }}
         ports:
         - containerPort: 80
           hostPort: 80
