--- a/cloud-config-server/template/cluster-desc.sample.yaml
+++ b/cloud-config-server/template/cluster-desc.sample.yaml
@@ -17,6 +17,7 @@ flannel_backend: "host-gw"
 coreos_channel: "stable"
 # coreos_version can be configured as the special version num or "current"
 coreos_version: "current"
+ingress_hostnetwork: true
 
 #OS type: CentOS or CoreOS
 os_name: "CentOS"
