--- a/cloud-config-server/template/cluster-desc.sample.yaml
+++ b/cloud-config-server/template/cluster-desc.sample.yaml
@@ -17,8 +17,8 @@ flannel_backend: "host-gw"
 coreos_channel: "stable"
 # coreos_version can be configured as the special version num or "current"
 coreos_version: "1122.2.0"
-# coreos gpu drivers version
-coreos_gpu_drivers_version: "367.57"
+# gpu drivers version
+gpu_drivers_version: "367.57"
 
 # OS type: CentOS or CoreOS
 os_name: "CoreOS"
