--- a/vm-cluster/cluster-desc.yml.template
+++ b/vm-cluster/cluster-desc.yml.template
@@ -17,6 +17,8 @@ flannel_backend: "host-gw"
 coreos_channel: "stable"
 # coreos_version can be configured as the special version num or "current"
 coreos_version: "current"
+#OS type: CentOS or CoreOS
+os_name: "CentOS"
 
 coreos:
   reboot_strategy: "etcd-lock"
