--- a/cloud-config-server/template/cloud-config.template
+++ b/cloud-config-server/template/cloud-config.template
@@ -568,10 +568,9 @@ ssh_authorized_keys:
       ExecStartPre=-/usr/bin/chmod +x /opt/bin/setup-network-environment
       ExecStart=/opt/bin/setup-network-environment
       RemainAfterExit=yes
-      Restart=always
-      RestartSec=5
       Type=oneshot
-
+      [Install]
+      WantedBy=multi-user.target
   {{- if .CephMonitor }}
   - path: /etc/systemd/system/ceph-mon.service
     owner: root
@@ -629,6 +628,8 @@ ssh_authorized_keys:
       -e KUBECTL_OPTS=--server=http://{{ .MasterHostname }}:8080 \
       -v /etc/kubernetes/addons/:/etc/kubernetes/addons/  \
       {{ .Dockerdomain }}:5000/{{ .Images.addon_manager }}
+      [Install]
+      WantedBy=multi-user.target
 
   - path: /etc/systemd/system/kubelet.service
     owner: root
