--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -4,7 +4,7 @@ FROM alpine
 # Install required software packages.
 RUN set -ex && \
 apk update && \
-apk add --no-cache dnsmasq openssl
+apk add dnsmasq openssl
 
 # Upload Sextant Go programs and retrieve dependencies.
 RUN mkdir -p /go/bin
