--- a/vm-cluster/cluster-desc.yml.template
+++ b/vm-cluster/cluster-desc.yml.template
@@ -13,10 +13,12 @@ k8s_service_cluster_ip_range: 10.100.0.0/24
 k8s_cluster_dns: 10.100.0.10
 # Flannel backend only support host-gw and udp for now.
 flannel_backend: "host-gw"
-# coreos_channel can be configured as stable, alpha, beta
+# coreos_channel can be configured as stable, alpha, beta.
 coreos_channel: "stable"
-# coreos_version can be configured as the special version num or "current"
+# coreos_version can be configured as the special version num or "current".
 coreos_version: "current"
+# Ntpserver set_ntp option for the cluster configuration.
+set_ntp: y
 #OS type: CentOS or CoreOS
 os_name: "CentOS"
 
